--- a/config.json
+++ b/config.json
@@ -1,21 +1,21 @@
 {
-    "ownerNumber": "6281575886399@s.whatsapp.net",
-    "ownerName": "Riy 04",
-    "botName": "Hinata-Md",
+    "ownerNumber": "62822009258719@s.whatsapp.net",
+    "ownerName": "Febzz",
+    "botName": "Flex-Md",
     "footer": "Xcode Team",
     "sessionName": "session",
-    "pathimg": "./media/hinata.jpg",
+    "pathimg": "./media/Hinata.jpg",
     "lolkey": "Beli Sendiri",
-    "youtube": "https://youtube.com/c/Riy04",
-    "instagram": "https://instagram.com/riychdwayne",
+    "youtube": "https://youtube.com/channel/UCB1j6WK6NVupR7a-MfHfOBg",
+    "instagram": "https://instagram.com/febririzqon?igshid=NTdlMDg3MTY=",
     "gamewaktu": 90,
     "limitCount": 25,
     "gcount": {
-        "prem": 35,
+        "prem": 2,
         "user": 15
     },
     "sticker": {
-        "packname": "Hinata-Md",
-        "author": "By Riy 04"
+        "packname": "Flex-Md",
+        "author": "By Febzz"
     }
 }
